@@ -265,197 +265,197 @@ wxSizer *PreferencesConnectionTab( wxWindow *parent, bool call_fit = TRUE, bool 
 #define IDC_RETRIES_LBL 10182
 #define IDC_AUTOSERVER 10183
 #define IDC_EDITADR 10184
-#define IDC_FILTER 10185
-#define IDC_UPDATESERVERCONNECT 10186
-#define IDC_UPDATESERVERCLIENT 10187
-#define IDC_SCORE 10188
-#define IDC_SMARTIDCHECK 10189
-#define IDC_SAFESERVERCONNECT 10190
-#define IDC_AUTOCONNECTSTATICONLY 10191
-#define IDC_MANUALSERVERHIGHPRIO 10192
+#define IDC_UPDATESERVERCONNECT 10185
+#define IDC_UPDATESERVERCLIENT 10186
+#define IDC_SCORE 10187
+#define IDC_SMARTIDCHECK 10188
+#define IDC_SAFESERVERCONNECT 10189
+#define IDC_AUTOCONNECTSTATICONLY 10190
+#define IDC_MANUALSERVERHIGHPRIO 10191
 wxSizer *PreferencesServerTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_ICH 10193
-#define IDC_AICHTRUST 10194
-#define IDC_ADDNEWFILESPAUSED 10195
-#define IDC_DAP 10196
-#define IDC_PREVIEWPRIO 10197
-#define IDC_UAP 10198
-#define IDC_FULLCHUNKTRANS 10199
-#define IDC_STARTNEXTFILE 10200
-#define IDC_SRCSEEDS 10201
-#define IDC_METADATA 10202
-#define IDC_CHUNKALLOC 10203
-#define IDC_FULLALLOCATE 10204
-#define IDC_CHECKDISKSPACE 10205
-#define ID_MINDISKTEXT 10206
-#define IDC_MINDISKSPACE 10207
+#define IDC_ICH 10192
+#define IDC_AICHTRUST 10193
+#define IDC_ADDNEWFILESPAUSED 10194
+#define IDC_DAP 10195
+#define IDC_PREVIEWPRIO 10196
+#define IDC_UAP 10197
+#define IDC_FULLCHUNKTRANS 10198
+#define IDC_STARTNEXTFILE 10199
+#define IDC_SRCSEEDS 10200
+#define IDC_METADATA 10201
+#define IDC_CHUNKALLOC 10202
+#define IDC_FULLALLOCATE 10203
+#define IDC_CHECKDISKSPACE 10204
+#define ID_MINDISKTEXT 10205
+#define IDC_MINDISKSPACE 10206
 wxSizer *PreferencesFilesTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_INCFILES 10208
-#define IDC_SELINCDIR 10209
-#define IDC_TEMPFILES 10210
-#define IDC_SELTEMPDIR 10211
-#define IDC_SHARESELECTOR 10212
-#define IDC_SHAREHIDDENFILES 10213
-#define IDC_VIDEOPLAYER 10214
-#define IDC_BROWSEV 10215
-#define IDC_VIDEOBACKUP 10216
+#define IDC_INCFILES 10207
+#define IDC_SELINCDIR 10208
+#define IDC_TEMPFILES 10209
+#define IDC_SELTEMPDIR 10210
+#define IDC_SHARESELECTOR 10211
+#define IDC_SHAREHIDDENFILES 10212
+#define IDC_VIDEOPLAYER 10213
+#define IDC_BROWSEV 10214
+#define IDC_VIDEOBACKUP 10215
 wxSizer *PreferencesDirectoriesTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_SLIDERINFO 10217
-#define IDC_SLIDER 10218
-#define IDC_SLIDERINFO3 10219
-#define IDC_SLIDER3 10220
-#define IDC_SLIDERINFO4 10221
-#define IDC_SLIDER4 10222
-#define IDC_PREFCOLORS 10223
-#define IDC_COLORSELECTOR 10224
-#define IDC_COLOR_BUTTON 10225
-#define IDC_SLIDERINFO2 10226
-#define IDC_SLIDER2 10227
+#define IDC_SLIDERINFO 10216
+#define IDC_SLIDER 10217
+#define IDC_SLIDERINFO3 10218
+#define IDC_SLIDER3 10219
+#define IDC_SLIDERINFO4 10220
+#define IDC_SLIDER4 10221
+#define IDC_PREFCOLORS 10222
+#define IDC_COLORSELECTOR 10223
+#define IDC_COLOR_BUTTON 10224
+#define IDC_SLIDERINFO2 10225
+#define IDC_SLIDER2 10226
 wxSizer *PreferencesStatisticsTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_CB_TBN_USESOUND 10228
-#define IDC_EDIT_TBN_WAVFILE 10229
-#define IDC_BTN_BROWSE_WAV 10230
-#define IDC_CB_TBN_ONLOG 10231
-#define IDC_CB_TBN_ONCHAT 10232
-#define IDC_CB_TBN_POP_ALWAYS 10233
-#define IDC_CB_TBN_ONDOWNLOAD 10234
-#define IDC_CB_TBN_ONNEWVERSION 10235
-#define IDC_CB_TBN_IMPORTATNT 10236
-#define IDC_SENDMAIL 10237
-#define IDC_SMTP 10238
-#define IDC_EMAIL 10239
+#define IDC_CB_TBN_USESOUND 10227
+#define IDC_EDIT_TBN_WAVFILE 10228
+#define IDC_BTN_BROWSE_WAV 10229
+#define IDC_CB_TBN_ONLOG 10230
+#define IDC_CB_TBN_ONCHAT 10231
+#define IDC_CB_TBN_POP_ALWAYS 10232
+#define IDC_CB_TBN_ONDOWNLOAD 10233
+#define IDC_CB_TBN_ONNEWVERSION 10234
+#define IDC_CB_TBN_IMPORTATNT 10235
+#define IDC_SENDMAIL 10236
+#define IDC_SMTP 10237
+#define IDC_EMAIL 10238
 wxSizer *PreferencesNotifyTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_WARNING 10240
-#define IDC_STATIC 10241
-#define IDC_MAXCON5SECLABEL 10242
-#define IDC_MAXCON5SEC 10243
-#define IDC_SAFEMAXCONN 10244
-#define IDC_VERBOSE 10245
-#define IDC_VERBOSEPACKETERROR 10246
-#define IDC_FILEBUFFERSIZE_STATIC 10247
-#define IDC_FILEBUFFERSIZE 10248
-#define IDC_QUEUESIZE_STATIC 10249
-#define IDC_QUEUESIZE 10250
-#define IDC_SERVERKEEPALIVE_LABEL 10251
-#define IDC_SERVERKEEPALIVE 10252
+#define IDC_WARNING 10239
+#define IDC_STATIC 10240
+#define IDC_MAXCON5SECLABEL 10241
+#define IDC_MAXCON5SEC 10242
+#define IDC_SAFEMAXCONN 10243
+#define IDC_VERBOSE 10244
+#define IDC_VERBOSEPACKETERROR 10245
+#define IDC_FILEBUFFERSIZE_STATIC 10246
+#define IDC_FILEBUFFERSIZE 10247
+#define IDC_QUEUESIZE_STATIC 10248
+#define IDC_QUEUESIZE 10249
+#define IDC_SERVERKEEPALIVE_LABEL 10250
+#define IDC_SERVERKEEPALIVE 10251
 wxSizer *PreferencesaMuleTweaksTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_PERCENT 10253
-#define IDC_PROGBAR 10254
-#define IDC_3DDEP 10255
-#define IDC_3DDEPTH 10256
-#define IDC_FLAT 10257
-#define IDC_ROUND 10258
-#define IDC_USESKIN 10259
-#define IDC_SKINFILE 10260
-#define IDC_SELSKINFILE 10261
-#define IDC_FED2KLH 10262
-#define IDC_EXTCATINFO 10263
-#define IDC_SHOWRATEONTITLE 10264
+#define IDC_PERCENT 10252
+#define IDC_PROGBAR 10253
+#define IDC_3DDEP 10254
+#define IDC_3DDEPTH 10255
+#define IDC_FLAT 10256
+#define IDC_ROUND 10257
+#define IDC_USESKIN 10258
+#define IDC_SKINFILE 10259
+#define IDC_SELSKINFILE 10260
+#define IDC_FED2KLH 10261
+#define IDC_EXTCATINFO 10262
+#define IDC_SHOWRATEONTITLE 10263
 wxSizer *PreferencesGuiTweaksTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_NNS_HANDLING 10265
-#define IDC_ENABLE_AUTO_FQS 10266
-#define IDC_ENABLE_AUTO_HQRS 10267
-#define IDC_HQR_VALUE 10268
-#define IDC_AUTO_DROP_TIMER 10269
+#define IDC_NNS_HANDLING 10264
+#define IDC_ENABLE_AUTO_FQS 10265
+#define IDC_ENABLE_AUTO_HQRS 10266
+#define IDC_HQR_VALUE 10267
+#define IDC_AUTO_DROP_TIMER 10268
 wxSizer *PreferencesSourcesDroppingTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_ENABLE_WEB 10270
-#define IDC_WEB_PORT 10271
-#define IDC_WEB_REFRESH_TIMEOUT 10272
-#define IDC_WEB_GZIP 10273
-#define IDC_ENABLE_WEB_LOW 10274
-#define IDC_WEB_PASSWD 10275
-#define IDC_WEB_PASSWD_LOW 10276
-#define IDC_EXT_CONN_ACCEPT 10277
-#define IDC_EXT_CONN_USETCP 10278
-#define IDC_EXT_CONN_TCP_PORT 10279
-#define IDC_EXT_CONN_PASSWD_ENABLE 10280
-#define IDC_EXT_CONN_PASSWD 10281
+#define IDC_ENABLE_WEB 10269
+#define IDC_WEB_PORT 10270
+#define IDC_WEB_REFRESH_TIMEOUT 10271
+#define IDC_WEB_GZIP 10272
+#define IDC_ENABLE_WEB_LOW 10273
+#define IDC_WEB_PASSWD 10274
+#define IDC_WEB_PASSWD_LOW 10275
+#define IDC_EXT_CONN_ACCEPT 10276
+#define IDC_EXT_CONN_USETCP 10277
+#define IDC_EXT_CONN_TCP_PORT 10278
+#define IDC_EXT_CONN_PASSWD_ENABLE 10279
+#define IDC_EXT_CONN_PASSWD 10280
 wxSizer *PreferencesRemoteControlsTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
 extern wxSizer *prefs_main_sizer;
 extern wxSizer *prefs_sizer;
 extern wxSizer *prefs_list_sizer;
-#define ID_PREFSLISTCTRL 10282
-#define ID_PREFS_OK_TOP 10283
-#define ID_PREFS_CANCEL_TOP 10284
+#define ID_PREFSLISTCTRL 10281
+#define ID_PREFS_OK_TOP 10282
+#define ID_PREFS_CANCEL_TOP 10283
 wxSizer *preferencesDlgTop( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_STATIC_TITLE 10285
-#define IDC_TITLE 10286
-#define IDC_STATIC_COMMENT 10287
-#define IDC_COMMENT 10288
-#define IDC_STATIC_INCOMING 10289
-#define IDC_INCOMING 10290
-#define IDC_BROWSE 10291
-#define IDC_STATIC_PRIO 10292
-#define IDC_PRIOCOMBO 10293
-#define IDC_STATIC_COLOR 10294
-#define ID_BOX_CATCOLOR 10295
-#define IDC_CATCOLOR 10296
+#define IDC_STATIC_TITLE 10284
+#define IDC_TITLE 10285
+#define IDC_STATIC_COMMENT 10286
+#define IDC_COMMENT 10287
+#define IDC_STATIC_INCOMING 10288
+#define IDC_INCOMING 10289
+#define IDC_BROWSE 10290
+#define IDC_STATIC_PRIO 10291
+#define IDC_PRIOCOMBO 10292
+#define IDC_STATIC_COLOR 10293
+#define ID_BOX_CATCOLOR 10294
+#define IDC_CATCOLOR 10295
 wxSizer *CategoriesEditWindow( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_SPLATTER 10297
+#define ID_SPLATTER 10296
 wxSizer *transferDlg( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_SERVERINFO 10298
-#define ID_BTN_RESET_SERVER 10299
+#define ID_SERVERINFO 10297
+#define ID_BTN_RESET_SERVER 10298
 wxSizer *ServerInfoLog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_LOGVIEW 10300
-#define ID_BTN_RESET 10301
+#define ID_LOGVIEW 10299
+#define ID_BTN_RESET 10300
 wxSizer *aMuleLog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_UPDATELIST 10302
-#define IDC_SERVERLISTURL 10303
-#define IDC_SERVERNAME 10304
-#define IDC_IPADDRESS 10305
-#define IDC_SPORT 10306
-#define ID_ADDTOLIST 10307
-#define ID_SERVERLIST 10308
+#define ID_UPDATELIST 10301
+#define IDC_SERVERLISTURL 10302
+#define IDC_SERVERNAME 10303
+#define IDC_IPADDRESS 10304
+#define IDC_SPORT 10305
+#define ID_ADDTOLIST 10306
+#define ID_SERVERLIST 10307
 wxSizer *serverListDlgUp( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_SRVLOG_NOTEBOOK 10309
+#define ID_SRVLOG_NOTEBOOK 10308
 wxSizer *serverListDlgDown( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_LOCALETEXT 10310
-#define ID_LOCALENEVERAGAIN 10311
+#define ID_LOCALETEXT 10309
+#define ID_LOCALENEVERAGAIN 10310
 wxSizer *LocaleWarning( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_NODELIST 10312
-#define ID_NODE_IP1 10313
-#define ID_NODE_IP2 10314
-#define ID_NODE_IP3 10315
-#define ID_NODE_IP4 10316
-#define ID_NODE_PORT 10317
-#define ID_NODECONNECT 10318
-#define ID_KNOWNNODECONNECT 10319
-#define ID_KADSEARCHLIST 10320
+#define ID_NODELIST 10311
+#define ID_NODE_IP1 10312
+#define ID_NODE_IP2 10313
+#define ID_NODE_IP3 10314
+#define ID_NODE_IP4 10315
+#define ID_NODE_PORT 10316
+#define ID_NODECONNECT 10317
+#define ID_KNOWNNODECONNECT 10318
+#define ID_KADSEARCHLIST 10319
 wxSizer *KadDlg( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define ID_MYSERVINFO 10321
+#define ID_MYSERVINFO 10320
 wxSizer *MyInfoLog( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
-#define IDC_SEESHARES 10322
-#define IDC_SPIN_PERM_FU 10323
-#define IDC_SPIN_PERM_FG 10324
-#define IDC_SPIN_PERM_FO 10325
-#define IDC_SPIN_PERM_DU 10326
-#define IDC_SPIN_PERM_DG 10327
-#define IDC_SPIN_PERM_DO 10328
-#define IDC_IPFONOFF 10329
-#define IDC_IPFRELOAD 10330
-#define IDC_AUTOIPFILTER 10331
-#define IDC_IPFILTERURL 10332
-#define IDC_IPFILTERUPDATE 10333
-#define ID_IPFILTERLEVEL 10334
+#define IDC_SEESHARES 10321
+#define IDC_SPIN_PERM_FU 10322
+#define IDC_SPIN_PERM_FG 10323
+#define IDC_SPIN_PERM_FO 10324
+#define IDC_SPIN_PERM_DU 10325
+#define IDC_SPIN_PERM_DG 10326
+#define IDC_SPIN_PERM_DO 10327
+#define IDC_IPFONOFF 10328
+#define IDC_IPFRELOAD 10329
+#define IDC_AUTOIPFILTER 10330
+#define IDC_IPFILTERURL 10331
+#define IDC_IPFILTERUPDATE 10332
+#define ID_IPFILTERLEVEL 10333
+#define IDC_FILTER 10334
 #define IDC_SECIDENT 10335
 wxSizer *PreferencesSecurityTab( wxWindow *parent, bool call_fit = TRUE, bool set_sizer = TRUE );
 
